styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  overflow: scroll;
  /* scroll-behavior: smooth; */
  width: 100%;
  height: 100%;
}

body {
  background-image: url("/background/background.WebP");
  background-size: cover;
  background-repeat: repeat;
  background-attachment: fixed;
  background-position: top center;
  width: 100%;
  height: 100%;
}

.disable-scrollbars::-webkit-scrollbar {
  background: transparent; /* Chrome/Safari/Webkit */
  width: 0px;
}

.disable-scrollbars {
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* IE 10+ */
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

@layer components {
  .underline-primary {
    @apply underline decoration-orange-theme decoration-1 underline-offset-2;
  }

  .hamburger {
    @apply transform transition w-full h-px bg-current absolute;
  }

  .homepage-button {
    @apply bg-orange-theme font-light text-slate-100 w-48 text-center p-3 rounded-lg hover:bg-orange-500 hover:text-white transition-all duration-200 ease-in-out hover:shadow-md hover:shadow-orange-600;
  }

  .h-content {
    @apply content-container;
  }
}
.content-container {
  height: calc(100vh - 5rem);
}
.swiper-button-disabled {
  visibility: hidden;
  opacity: 0;
  transition: 0.5s ease-in-out;
}

.swiper-button-next,
.swiper-button-prev {
  color: #334155 !important;
  transition: opacity 0.5s;
}

input[type="text"]:focus ~ .input-text,
input[type="text"]:not(:placeholder-shown) ~ .input-text {
  @apply transform -translate-y-8 -translate-x-2 scale-90 text-slate-500;
}
input[type="email"]:focus ~ .input-text,
input[type="email"]:not(:placeholder-shown) ~ .input-text {
  @apply transform -translate-y-8 -translate-x-2 scale-90 text-slate-500;
}
input[type="password"]:focus ~ .input-text,
input[type="password"]:not(:placeholder-shown) ~ .input-text {
  @apply transform -translate-y-8 -translate-x-2 scale-90 text-slate-500;
}

